Added a new command 'camelcase_that', and a new key code 'mycontrol'.
The 'camelcase_that' command will convert any selected text to camel case.  The 'mycontrol' key code represents VK_META on Mac systems, and VK_CONTROL on Windows, or any other systems.